<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.volleyballscorecounter.TeamNameInputActivity">

    <ImageView
        style="@style/app_bg"
        android:contentDescription="@string/bg_description" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/edge_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_margin"
                android:background="@color/bg_tint"
                android:text="@string/welcome_msg"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/title_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_margin"
                android:background="@color/bg_tint"
                android:text="@string/name_instructions"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/regular_size" />

            <EditText
                android:id="@+id/teamA_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_margin"
                android:background="@color/bg_tint"
                android:hint="@string/team_hintA"
                android:textAlignment="center"
                android:inputType="text"
                android:textColorHint="@color/hintColor" />

            <EditText
                android:id="@+id/teamB_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_margin"
                android:background="@color/bg_tint"
                android:hint="@string/team_hintB"
                android:textAlignment="center"
                android:inputType="text"
                android:textColorHint="@color/hintColor" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_margin"
                android:onClick="getTeamNames"
                android:padding="@dimen/edge_padding"
                android:text="@string/name_button"
                android:textSize="@dimen/regular_size" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
